--- a/history.txt
+++ b/history.txt
@@ -1,21 +1,359 @@
 history
-248: Well
-248: 
+history
+252: noobs
+252: 
 
-244: Hi
+256: hahaha
+256: 
+
+256: hahah
+256: 
+
+256: aha
+256: 
+
+256: noobie
+
+256: 
+252: 
+history
+244: Abra
 244: 
 
-248: HoBro
-
-248: BRo
-248: 
-
-244: 
-sjf
+244: Kadabra
 244: 
 
-244: Where
+244: Brat
+244: 
 
-248: Are you
+248: wtf
 248: 
+
+248: wtf
+248: 
+
+248: wtf
+
+244: aha
+
+244: aha
+
+248: hi
+248: 
+
+248: boom
+
+244: boom
+244: 
+
+history from Fri May 03 17:54:07 2024
+
+248: Hi. It's me
+
+244: Hello.
+244: 
+
+248: Nice to see you
+248: 
+
+244: Haha same
+244: 
+
+history from Fri May 03 18:05:24 2024
+
+252: Hola
+
+248: Hola bro
+248: 
+
+248: /name ivan
+
+248: d
+
+252: d
+252: 
+
+252: d
+
+252: d
+
+252: d
+
+252: d
+
+252: /name aspdoasdo
+252: 
+
+248: /name aksdjkasdk
+248: 
+
+248: ds
+248: 
+
+252: das
+252: 
+
+history from Fri May 03 18:11:15 2024
+
+256: hmmm
+256: 
+
+252: gg
+252: 
+
+252: /name
+history from Fri May 03 18:11:52 2024
+
+184: daskd
+184: 
+
+260: dsf
+
+184: /name s
+184: 
+
+184: s
+
+184: s
+
+184: s
+
+260: /name Sasha
+
+260: Hello!
+260: 
+
+184: /name Egor
+
+184: hello!
+184: 
+
+260: hi
+
+184: how are you
+184: 
+
+260: norm
+
+history from Fri May 03 18:13:02 2024
+
+164: /name xbox
+164: 
+
+264: /name playstation
+
+264: hi lmao
+264: 
+
+164: hi noob
+164: 
+
+264: bruh
+
+264: das
+
+264: dasd
+264: 
+
+264: as
+264: 
+
+264: das
+
+264: dsa
+
+264: dsa
+264: 
+
+264: sad
+264: 
+
+history from Fri May 03 18:35:06 2024
+
+244: /name abc
+244: 
+
+244: hello
+244: 
+
+248: /name bcd
+
+244: hello
+244: 
+
+248: f
+248: 
+
+248: f
+
+248: fhaha
+
+248: lmao
+
+history from Fri May 03 18:36:17 2024
+
+256: /name baba
+
+260: /name sasha
+260: 
+
+260: priv
+
+256: privet
+
+256: bro kak dela
+256: 
+
+256: /name noooob
+
+256: f
+256: 
+
+256: ewqkleqwkl
+256: 
+
+256: dk
+
+256: jd
+256: 
+
+256: fgr
+256: 
+
+256: privet
+
+260: k
+260: 
+
+260: d
+
+260: d
+
+260: s
+
+260: s
+260: 
+
+260: df
+260: 
+
+260: f
+
+260: s
+260: 
+
+260: 
+
+260: r
+260: 
+
+260: r
+
+260: e
+
+260: s
+
+260: e
+
+260: f
+
+260: s
+
+256: /name sasha
+256: 
+
+260: zoob
+260: 
+
+260: zoob
+
+256: zoob
+256: 
+
+256: dk
+
+256: d
+256: 
+
+256: d
+
+256: d
+256: 
+
+260: ffd
+
+256: baby
+
+260: bab
+260: 
+
+260: bab
+260: 
+
+260: bab
+260: 
+
+260: bab
+
+260: bab
+
+256: s
+256: 
+
+256: s
+
+256: s
+256: 
+
+256: s
+
+256: s
+
+256: ss
+256: 
+
+256: s
+
+256: s
+256: 
+
+256: sas
+256: 
+
+256: sas
+256: 
+
+256: sas
+
+256: sas
+
+256: sas
+256: 
+
+256: sas
+256: 
+
+256: sas
+256: 
+
+256: sas
+256: 
+
+260: sa
+
+260: sa
+260: 
+
+260: sa
+260: 
+
+260: sa
+
+260: sdasda
+260: 
+
+260: dsadoijweifwi
+
+260: privet egor
+260: 
 
