--- a/history.txt
+++ b/history.txt
@@ -357,3 +357,1019 @@ history from Fri May 03 18:36:17 2024
 260: privet egor
 260: 
 
+history from Fri May 03 19:03:54 2024
+
+248: well
+248: 
+
+244: welp
+
+248: how are you!
+248: 
+
+244: i am good
+244: 
+
+248: and you?
+
+244: same
+244: 
+
+248: d
+
+248: d
+248: 
+
+248: d
+248: 
+
+248: d
+248: 
+
+248: d
+248: 
+
+248: asl[dals
+248: 
+
+244: sadjas
+
+244: dajsjkdsa
+
+244: sndjksaj
+
+244: dkldsjk
+
+244: s
+
+244: s
+
+244: 
+
+244: s
+244: 
+
+244: s
+244: 
+
+244: 
+
+244: 
+
+244: hm
+
+244: hm
+
+244: well....
+244: 
+
+244: i guess so
+
+244: lmao
+244: 
+
+history from Fri May 03 19:05:26 2024
+
+172: welp
+172: 
+
+264: yep?
+
+172: how are you
+172: 
+
+264: good
+264: 
+
+264: godo
+264: 
+
+172: kdk
+172: 
+
+172: d
+172: 
+
+172: wk
+172: 
+
+172: a
+
+172: w
+
+172: w
+172: 
+
+264: as
+
+264: s
+
+264: s
+264: 
+
+264: s
+
+264: sdlaledle
+264: 
+
+264: fsl
+264: 
+
+264: flrklr
+264: 
+
+history from Fri May 03 19:11:37 2024
+
+260: ivan
+260: 
+
+256: ivan
+256: 
+
+256: s
+
+256: sda
+
+260: prosto
+260: 
+
+260: privet
+260: 
+
+256: s
+
+256: s
+256: 
+
+256: erfwe
+
+256: kfd
+
+256: k
+
+256: f
+256: 
+
+256: f
+256: 
+
+256: fsdf
+256: 
+
+256: efs
+256: 
+
+256: fisfeisfi
+
+256: sejfjksejkjkfjksejf
+
+260: fesjkfsjfsjk
+
+260: slkrgjksjkrgjksr
+
+260: lgsrkgs
+260: 
+
+260: sklgjsjkr
+
+260: sljgjjrgsjlrgjsagsjhgrjskg
+
+history from Fri May 03 19:13:27 2024
+
+history from Fri May 03 19:13:32 2024
+
+260: f
+260: 
+
+260: f
+260: 
+
+256: skooby
+256: 
+
+256: skooby
+256: 
+
+260: sss
+
+260: sdas
+260: 
+
+260: dasd
+260: 
+
+260:  d
+260: 
+
+260:  dkfkjdsjfj
+
+260:  sdkfsd
+
+260:  dksdkld
+
+256:  sakklsa
+
+256:  sasjajskjas
+256: 
+
+256:  ajsjasjka
+
+256: 
+
+256: smsa
+
+256: sjasd
+
+256: eklkla
+256: 
+
+history from Fri May 03 19:15:33 2024
+
+272: брат
+
+272: брат го сидж
+
+268: окей бро го
+268: 
+
+268: пойдём сиджик
+268: 
+
+268: let's play siege
+268: 
+
+272: okay
+
+272: l
+
+272: l
+272: 
+
+272: l
+272: 
+
+272: 
+
+272: 
+
+272: 
+
+272: 
+
+272: l
+272: 
+
+272: l
+
+272: l
+
+272: l
+
+272: l
+272: 
+
+272: l
+
+272: l
+
+history from Fri May 03 19:16:52 2024
+
+260: vvv
+
+256: hihih
+256: 
+
+256: go siege
+256: 
+
+260: go!!
+
+260: ура пойдём сиджик
+260: 
+
+256: оу е бейби
+
+260: погнали!!!!!!!!!!!!!
+260: 
+
+260: /name Егор
+
+256: /name Саша
+256: 
+
+256: Бро, когда сидж?
+256: 
+
+260: Не знаю
+
+256: 
+
+256: /name i
+256: 
+
+256: /name ii
+256: 
+
+256: /name i
+256: 
+
+256: s
+256: 
+
+256: s
+
+256: s
+256: 
+
+256: s
+256: 
+
+256: 
+
+256: 
+
+256: 
+
+256:  
+256: 
+
+256:  
+
+256: 
+
+260: s
+
+256: s
+
+260:  
+260: 
+
+260:  
+260: 
+
+260:  
+
+260:  
+260: 
+
+history from Fri May 03 19:20:41 2024
+
+268: Привет го сидж
+
+264: нет я с мака
+
+268: пиздец
+
+268: лол
+268: 
+
+268: лол
+
+268: аххаахзахахахха
+
+268: ахаххааххахаах
+
+268: сейчас бы в 2024 играть на маке)
+268: 
+
+268: кринжанул
+268: 
+
+264: пффф
+
+264: пф
+
+264: ыа
+
+264: kdsk
+264: 
+
+264: lfdslfslfsdk
+
+264: \
+264: 
+
+264: 
+
+264: 
+
+264: 
+
+264: 
+
+264: 
+
+264: 
+
+264: f
+
+264: dfsdsdfewf
+264: 
+
+264: fgdfgdfgdfgdfgdfgdf
+264: 
+
+264: dfgdfgdfgdfg
+
+264: dfgdfgdgr
+264: 
+
+history from Fri May 03 19:25:11 2024
+
+172: zfwe
+172: 
+
+172: ofewf
+
+172: 
+
+172: ssds
+172: 
+
+172: ll
+
+172: baba
+
+172: b
+
+172: b
+172: 
+
+172: ksadk
+172: 
+
+172: osdoaos
+
+172: klsdkask
+
+172: 
+
+172: dlsaopdsoa
+
+172: dsopaopdo
+172: 
+
+172: /name iaodio
+172: 
+
+172: lk
+172: 
+
+172: sd
+
+172: da
+172: 
+
+172: s
+
+172: 
+
+172: 
+
+history from Fri May 03 19:26:57 2024
+
+168: hey
+
+260: hey
+
+260: e
+
+260: e
+260: 
+
+260: e
+
+260: efwlfow
+
+260: fwekfowe\
+260: 
+
+168: fweopgopw
+168: 
+
+168: gwegkweo
+
+168: wekltwlk
+168: 
+
+168: l;slkg
+
+168: gw
+
+168: 
+
+168: 
+
+168: 
+
+168: ok
+168: 
+
+168: ok
+
+260: ok
+
+260: hm
+260: 
+
+168: hm
+168: 
+
+168: hm
+
+168: hm
+168: 
+
+168: hm
+168: 
+
+168: hm
+
+168: hm
+168: 
+
+168: hm
+
+168: hm
+168: 
+
+168: hm
+
+168: okay bobby
+
+168: okay
+
+260: hm
+260: 
+
+260: mhmh
+
+history from Fri May 03 19:28:44 2024
+
+248: пон
+248: 
+
+84: лол
+84: 
+
+248: lol
+248: 
+
+248: hi
+248: 
+
+248: hi
+
+248: a
+
+248: a
+248: 
+
+248: wait
+248: 
+
+248: wait
+
+248: 
+
+248: 
+
+248: ok
+
+248: ok
+248: 
+
+248: ok
+
+248: ok
+
+248: ok
+248: 
+
+248: ok
+
+248: ok
+248: 
+
+248: ok
+
+248: wkekwq
+
+248: weqdwq
+
+248: dfwe
+248: 
+
+248: f
+248: 
+
+248: wefsdfsef
+
+248: we
+248: 
+
+248: fwe
+248: 
+
+248: fg
+
+248: wefw
+248: 
+
+84: fds
+
+84: f
+
+84: swf
+84: 
+
+84: we
+
+84: f
+
+84: weqg
+84: 
+
+84: weg
+84: 
+
+84: we
+
+84: gwe
+84: 
+
+84: g
+
+84: we
+
+84: 
+
+84: 
+
+84: 
+
+84: 
+
+84: 
+
+84: a
+
+84: a
+84: 
+
+84: a
+
+84: a
+
+84: a
+
+84: a
+
+84: as
+
+84: as
+
+248: ba
+
+248: ba
+
+248: ba
+
+248: ba
+
+248: ba
+
+248: ba
+248: 
+
+248: ba
+248: 
+
+248: ok
+248: 
+
+248: qw
+248: 
+
+84: qw
+84: 
+
+84: qw
+
+84: qw
+84: 
+
+84: kd
+
+84: kf
+
+84: uj
+
+84: kf
+84: 
+
+84: kf
+
+84: kf
+84: 
+
+84: 12
+
+84: 12
+
+84: 12
+84: 
+
+248: cin.ignore();
+
+248: f
+
+248: aa
+
+248: dd
+
+248: dd
+
+248: ww
+248: 
+
+84: ww
+
+84: ww
+84: 
+
+84: ww
+84: 
+
+84: ww
+
+84: 
+248: 
+history from Fri May 03 19:42:06 2024
+
+84: f
+history from Fri May 03 19:42:58 2024
+
+176: f
+
+history from Fri May 03 19:43:35 2024
+
+244: fff
+
+244: fasfk
+244: 
+
+244: fwkelfkwe
+244: 
+
+248: fwel;f
+history from Fri May 03 19:44:08 2024
+
+84: w
+
+84: wq
+
+84: 
+
+84: we
+84: 
+
+84: 
+
+84: qwe
+
+84: qw
+
+84: e
+84: 
+
+84: wq
+84: 
+
+84: e
+84: 
+
+84: qwe
+
+84: qw
+84: 
+
+84: eq
+84: 
+
+84: we
+
+84: qw
+84: 
+
+84: 
+84: ы
+
+84: ыв
+84: 
+
+84: fsak
+84: 
+
+84: ksdaksd
+84: 
+
+history from Fri May 03 20:22:10 2024
+
+240: f
+
+240: f
+
+240: f
+
+240: f
+240: 
+
+240: f
+
+240: f
+
+240: dslflsd
+
+240: kjkik
+240: 
+
+244: xcvxd
+244: 
+
+244: jj
+244: 
+
+240: 
+
+240: 
+
+240: 
+
+240: 
+
+240: 
+244: 
+244: 23
+
+244: 32
+244: 
+
+244: вцфвд
+
+244: ksdfkse
+244: 
+
+240: few
+240: 
+
+240: fewf
+240: 
+
+240: fwelkfwekl
+240: 
+
+240: fl;wle;fl;wfl;welflw;ef
+240: 
+
+240: 
+
+240: 
+
+240:  
+240: 
+
+240:  
+240: 
+
+240: a
+
+240:  
+240: 
+
+240: /name telfunje
+
+240: e
+240: 
+
+240: 
+
+240: 
+
+240: 
+244: 
+history from Fri May 03 21:35:45 2024
+
+248: hola
+248: 
+
+248: krwek\
+248: 
+
+248: rekjwrk
+248: 
+
+248: rewjrw
+
+244: rwekprwk
+244: 
+
+244: fixed
+244: 
+
+248: ???
+248: 
+
+248: 
+
+244: 
+
+244: 
+
+244: 
+
+244: fin
+244: 
+
+244: finally
+244: 
+
+248: ahaha
+248: 
+
+248: 
+
+248: 
+
+248: fdskl
+248: 
+
+248: fsdkf
+
+248: fkw
+248: 
+
+244: fsdjj
+244: 
+
+244: ok
+244: 
+
+244: ok
+244: 
+
+244: as
+244: 
+
+244: a
+
+244: a
+244: 
+
+244: a
+244: 
+
+244: a
+
+244: a
+
+244: a
+
+244: aa
+244: 
+
+244: a
+244: 
+
+244: asd
+
+244: kwekfew
+
+248: yep
+248: 
+
+248: let's go
+
+244: ha-ha
+244: 
+
+248: /name ivan
+248: 
+
+248: hello
+248: 
+
+248: hello
+248: 
+
+248: hoaw
+
+244: /name 2
+244: 
+
+244: afk
+
+244: fjkwk
+
+244: 
+248: 
